# wormhole-gui-qt

./: CMakeLists.txt  README.md  build.sh
packaging/: wormhole-qt.desktop
src/: DropArea.h  MainWindow.cpp  MainWindow.h  NavBar.cpp  NavBar.h  ReceivePage.cpp  ReceivePage.h  SendPage.cpp  SendPage.h  SettingsPage.cpp  SettingsPage.h  main.cpp
